# shapley-game

./: README.md  pyproject.toml
src/shapley-game/: game.py
src/shapley_game/: game.py
src/tu-games/: game.py
src/tu_games/: game.py
tests/: test_random.py  test_sol.py
