[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shapley_game"
version = "0.0.3"
authors = [
  { name="Alexandre Larouche", email="quoding@protonmail.ch" },
]
description = "Basic implementation of a transferrable utility (TU) game and compute its Shapley value solution."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Quoding/shapley-game"
"Bug Tracker" = "https://github.com/Quoding/shapley-game/issues"